--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,17 +41,7 @@ steps:
       print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
 
 - script: |
-    set -o errexit
-    python -m pip install --upgrade pip
-    pip install python-dotenv
-    pip install django
-    pip install django-cors-headers
-    pip install djangorestframework
-    pip install mysqlclient
-    pip install gunicorn
-    pip install psycopg2
-    python manage.py migrate
-    pip install unittest-xml-reporting
+  cd back-end && ./build.sh
   displayName: 'Install prerequisites'
 
 - script: |
