Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,3 +55,16 @@ steps:
     testResultsFiles: "**/TEST-*.xml"
     testRunTitle: 'Python $(PYTHON_VERSION)'
   condition: succeededOrFailed()
+    steps:
+    - task: UsePythonVersion@0
+       inputs:
+         versionSpec: '$(pythonVersion)'
+         displayName: 'Use Python $(pythonVersion)'
+    - script: |
+         python -m venv antenv
+         source antenv/bin/activate
+         python -m pip install --upgrade pip
+         pip install setup
+         pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+       workingDirectory: $(projectRoot)
+       displayName: "Install requirements"
