Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,8 +41,8 @@ steps:
       print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
 
 - script: |
-  cd back-end
-  ./build.sh
+    cd back-end
+    ./build.sh
   displayName: 'Install prerequisites'
 
 - script: |
@@ -50,21 +50,14 @@ steps:
     python manage.py test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
   displayName: 'Run tests'
 
-- task: PublishTestResults@2
+
+- task: ArchiveFiles@2
   inputs:
-    testResultsFiles: "**/TEST-*.xml"
-    testRunTitle: 'Python $(PYTHON_VERSION)'
-  condition: succeededOrFailed()
-    steps:
-    - task: UsePythonVersion@0
-       inputs:
-         versionSpec: '$(pythonVersion)'
-         displayName: 'Use Python $(pythonVersion)'
-    - script: |
-         python -m venv antenv
-         source antenv/bin/activate
-         python -m pip install --upgrade pip
-         pip install setup
-         pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
-       workingDirectory: $(projectRoot)
-       displayName: "Install requirements"
+      rootFolderOrFile: '$(Build.SourcesDirectory)'
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+      replaceExistingArchive: true
+- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
+  displayName: 'Upload package'
+  artifact: drop
